added items storage logic to get rid of duplicates upon clicking the button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./index.css">
     <title>Shopping Cart</title>
 </head>
 <body>
@@ -52,15 +53,13 @@
                 </div>
             </div>
             <div class="right">
-                <div class="table-auto" id="table">
-                    <thead>
-                        <tr>
-                          <th>Item</th>
-                          <th>Price</th>
-                          <th>Qtn</th>
-                          <th>Remove</th>
-                        </tr>
-                    </thead>
+                <div class="" id="list">
+                    <!-- <li>
+                        <h4>Item</h1>
+                        <h4>Price</h4>
+                        <h4>Qtn</h4>
+                        <h4>Remove</h4>
+                    </li> -->
                 </div>
             </div>
         </div>
